[fix] Collapse.scss and Page About

--- a/kasa/src/components/Collapse/Collapse.scss
+++ b/kasa/src/components/Collapse/Collapse.scss
@@ -1,5 +1,5 @@
 .list-item {
-  width: 60%;
+  width: 80%;
   height: 48px;
   background-color: #FF6060;
   margin: 0 auto;
@@ -8,6 +8,12 @@
   justify-content: space-between;
   padding: 0 16px;
   position: relative;
+
+  p {
+    margin: auto 0;
+    color:  white;
+    font-size: 13px;
+  }
 }
 
 .icon-wrapper {
@@ -15,4 +21,34 @@
   cursor: pointer;
   height: auto;
   width: auto;
+}
+
+.list-wrapper {
+  list-style: none;
+  justify-content: center;
+  display: block;
+  justify-items: center;
+  padding-left: 0;
+  margin-bottom: 112px;
+
+  li {
+    margin: 32px 0;
+  }
+}
+
+.collapsed-text {
+  height: 0;
+  width: 80%;
+  height: auto;
+  margin: 0 auto  ;
+  color: #FF6060;
+  background-color: #F7F7F7;
+  padding: 16px;
+  border-radius: 0 0 7px 7px;
+}
+
+@media screen and (max-width: 500px) {
+  .list-item,.collapsed-text {
+    width: 80%;
+  }
 }
