--- a/kasa/src/pages/About/About.scss
+++ b/kasa/src/pages/About/About.scss
@@ -10,70 +10,3 @@
   position: relative;
 }
 
-.list-wrapper {
-  list-style: none;
-  justify-content: center;
-  display: block;
-  justify-items: center;
-  padding-left: 0;
-  margin-bottom: 112px;
-}
-
-.list-item {
-  width: 60%;
-  height: 48px;
-  background-color: #FF6060;
-  margin: 0 auto;
-  border-radius: 7px;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 16px;
-  position: relative;
-}
-
-.list-wrapper>li {
-  margin: 32px 0;
-}
-
-.icon-wrapper {
-  margin: auto 0;
-  cursor: pointer;
-  height: auto;
-  width: auto;
-}
-
-.list-item>p {
-  margin: auto 0;
-  color:  white;
-}
-
-// .expanded-text {
-//   width: 60%;
-//   height: auto;
-//   margin: 0 auto;
-//   background-color: #F7F7F7;
-//   padding: 16px;
-//   p {
-//     margin: 0;
-//     color: #FF6060;
-//   }
-// }
-
-.collapsed-text {
-  height: 0;
-  // overflow: hidden;
-  display: block;
-  width: 60%;
-  height: auto;
-  margin: 0 auto  ;
-  color: #FF6060;
-  background-color: #F7F7F7;
-  padding: 16px;
-  border-radius: 0 0 7px 7px;
-}
-
-// @media screen and (max-width: 500px) {
-//   .list-item,.expanded-text,.collapsed-text {
-//     width: 80%;
-//   }
-// }
