--- a/kasa/src/pages/PageNotFound/PageNotFound.scss
+++ b/kasa/src/pages/PageNotFound/PageNotFound.scss
@@ -5,12 +5,12 @@
   
   h1 {
     font-size: 288px;
-    margin: 80px 0;
+    margin: 60px 0;
     color: #FF6060;
   }
   
   h2 {
-    color: #FF6060;
+    color: #FF6060; 
   }
 }
 
